Adjust community festival page

--- a/festival/community.html
+++ b/festival/community.html
@@ -118,7 +118,7 @@
                         <p>Mystic Nights Entertainment is a community of Performers including Dancers, Singer and Musicians; within the community there are 3 separate groups. 2 of Dancers as well as 1 group of Singers. The group was established in 213 and
                             is like a family regardless of one of our groups being based in Indonesia. Together we are 15 members (at the current moment) and we cover choreography of all genres which include a range of cultures due to the group's member's
                             diversity.&nbsp; </p>
-                        <p> <a href="#"><span style="text-decoration: underline;">Mystic Nights Dance Workshops</span> </a></p>
+                        <p> <a href="#" style="color:#808080;"><span style="text-decoration: underline;">Mystic Nights Dance Workshops</span> </a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-sm-3">
@@ -140,8 +140,8 @@
                         <p>ML is working as the producer name, Meligen.&nbsp;His career has&nbsp;started since 2007 as DJ. He plays or produces 'All kinds' genre but he is good at Hip-hop especially. He always wants to work and he is looking&nbsp;forword
                             to contact for the allabout music.DJ, Producer, Composer, Arranger, Record producer, Recording enginner, Mixing enginner,&nbsp;Mastering enginner, Music directer and also he does that post and sound enginner such as animation
                             and movie. </p>
-                        <p> <a href="#">www.facebook.com/zerothML </a>
-                            <br/><a href="#">www.instagram.com/ml_jeon/ </a></p>
+                        <p style="color:#808080;"><a href="https://www.facebook.com/zerothML" style="color:#808080;"><span style="text-decoration: underline;">www.facebook.com/zerothML</span> </a>
+                            <br/><a href="https://www.instagram.com/ml_jeon" style="color:#808080;"><span style="text-decoration: underline;">www.instagram.com/ml_jeon</span> </a></p>
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                         <h4 style="color:#1f2021;"><strong>Gunmin Kim</strong> </h4>
                         <p>Gunmin Kim is an active member of ‘Artrash’ which is a Arts and Environmental project. He has been&nbsp;touring around Korea to promote the ‘Artrash since 2014. &nbsp;Gunmin as a singer, he was inspired by Folk and Band music,
                             especially 60’s British band music and UK artists. His style can be compaired with Adele, Sam Smith, Birdy, Ed Sheeran. </p>
-                        <p> <a href="#"><span style="text-decoration: underline;">www.artrash.org</span> </a></p>
+                        <p> <a href="www.artrash.org " style="color:#808080;"><span style="text-decoration: underline;">www.artrash.org</span> </a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-sm-3">
@@ -181,6 +181,9 @@
                         <br/>
                         <p>Jeunghyun Choi, Yung-Kyung Choi, Gina-ha Golin, Seyoung Jeong </p>
                     </div>
+                </div>
+                <div class="col-md-12">
+                    <p> </p>
                 </div>
             </div>
             <div class="row">
@@ -230,8 +233,19 @@
                         <p>We provide quality personal development training in Korean Martial Arts to include Hapkido, Yongmudo, Gumdo (Swordsmanship) and Women’s self-defence. Our vast syllabus is beneficial and ideal for every one of all ages and abilities,
                             and we offer flexible programmes which are specifically designed to cater for your needs.&nbsp;We hold Martial Arts &amp; Self-defence classes in, Wandsworth (London), Worcester Park (Surrey), New Haw (Surrey), Guildford (Surrey).
                             </p>
-                        <p><a href="#">www.skma.co.uk </a>
-                            <br/><a href="#"><span style="text-decoration: underline;">info@skma.co.uk</span> </a></p>
+                        <div class="clearfix" style="margin-bottom: 5px; ">
+    <img src="../assets/img/logo_hapkido.jpg" style="float:left; width:80px;" />
+    <div style="height:100%; display:inline-block; vertical-align:middle; float: none;">
+        <br />
+        <a href="http://www.skma.co.uk " style="color:#808080;">
+            <span style="text-decoration: underline;">www.skma.co.uk</span>
+        </a>
+        <br />
+        <a href="mailto:info@skma.co.uk " style="color:#808080;">
+            <span style="text-decoration: underline;">info@skma.co.uk</span>
+        </a>
+    </div>
+</div>
                     </div>
                 </div>
             </div>
@@ -250,23 +264,15 @@
                 </div>
                 <div class="col-lg-6 col-md-7 col-sm-9">
                     <div class="text">
-                        <p>Korean cuisine is largely based on&nbsp;<a href="https://en.wikipedia.org/wiki/Rice" target="_blank">rice</a>, <a href="https://en.wikipedia.org/wiki/Vegetable" target="_blank">vegetables</a>, and&nbsp;<a href="https://en.wikipedia.org/wiki/Meat"
-                            target="_blank">meats</a>. Traditional Korean meals are noted for the number of&nbsp;<a href="https://en.wikipedia.org/wiki/Side_dish" target="_blank">side dishes</a> that accompany&nbsp;<a href="https://en.wikipedia.org/wiki/Steaming"
-                            target="_blank">steam-cooked</a> short-grain rice.&nbsp;<a href="https://en.wikipedia.org/wiki/Kimchi" target="_blank">Kimchi</a> is almost always served at every meal. Commonly used ingredients include&nbsp;<a href="https://en.wikipedia.org/wiki/Sesame_oil"
-                            target="_blank">sesame oil</a>, <a href="https://en.wikipedia.org/wiki/Doenjang" target="_blank">doenjang</a> (<a href="https://en.wikipedia.org/wiki/Fermented_bean_paste" target="_blank">fermented bean paste</a>), <a href="https://en.wikipedia.org/wiki/Korean_soy_sauce"
-                            target="_blank">soy sauce</a>, salt, garlic, ginger,&nbsp;<a href="https://en.wikipedia.org/wiki/Chili_pepper" target="_blank">pepper</a> flakes,&nbsp;<a href="https://en.wikipedia.org/wiki/Gochujang" target="_blank">gochujang</a>                            (fermented red chili paste) and napa cabbage. </p>
+                        <p>Korean cuisine is largely based on rice, vegetables, and meats. Traditional Korean meals are noted for the number of side dishes that accompany steam-cooked short-grain rice. Kimchi is almost always served at every meal. Commonly
+                            used ingredients include sesame oil, doenjang (fermented bean paste), soy sauce, salt, garlic, ginger, pepper flakes, gochujang (fermented red chili paste) and napa cabbage.&nbsp; </p>
                         <p>South Korean dishes are very different from western Foods in general, as there are a lot of side-dishes being served alongside the main dish. Hence the name ‘slide dishes’. &nbsp;The side dishes are to compliment the main dish.
                             </p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
-                    <div class="toc">
-                        <figure><img class="img-responsive"></figure>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-5 col-sm-7">
+                <div class="col-lg-5 col-lg-offset-2 col-md-7 col-md-offset-1 col-sm-9">
                     <div>
                         <div class="text">
                             <h4 style="font-family:Armata, sans-serif;color:#eb4221;"><strong>CHEF </strong></h4>
@@ -276,14 +282,9 @@
                                     the UK. </p>
                             </div>
                         </div>
-                        <img src="../assets/img/community-fest_10.jpg" class="img-responsive pull-right" style="width:100px;" />
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2">
-                    <div style="float:none; display:table-cell;">
-    <img src="../assets/img/community-fest_09.png" class="img-responsive" />
-</div>
-                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3" style="padding-right:px;padding-left:70px;"><img class="img-responsive" src="../assets/img/community-fest_11.png" style="width:200px;"></div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -298,14 +299,16 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_06.jpg">
+                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_06.jpg" style="padding-bottom:10px;">
                     <p>They will be boys and girls strutting the catwalk, with originals outfits made by recyclable goods- showing the collision of fashion and rubbish for the public to enjoy. ‘ArtTrash’ is created by Seyoung Jang, who established ‘ArtTrash’
                         based in Gwanak-Gu. The artist will be working along with the Environmental Department of Kingston Council, which works towards ‘waste 0’ Scheme. This show is to inspire the youth as well as the old to see the beauty within rubbish
                         and to put it into good used, as in these day and age we are used to wasting so much! where are all these things can be put to good and create something beautiful and memorable. This show reflects that!&nbsp; </p>
                     <p>We encourage everyone to join us in this movement, by collecting any trash/rubbish, that they see throughout the event and bring it along to the ‘Market Place’ where it will be your turn into your own Art Trash done by the locals!
                         The rubbish you bring to the ‘Market Palace’ will be turned into An Art form. The installation work will be presented at the Market Place! Children are welcome to join too! &nbsp;As the rubbish, you give can be used as a token
-                        in exchange for a face painting or education programmes on the day!&nbsp;Let’s Get Arty!&nbsp; </p><a href="#">www.artrash.org </a></div>
-                <div class="col-lg-4 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_05.jpg">
+                        in exchange for a face painting or education programmes on the day!&nbsp;Let’s Get Arty!&nbsp; </p>
+                    <div><a href="www.artrash.org " style="color:#808080;"><span style="text-decoration: underline;">www.artrash.org</span> </a><img src="../assets/img/logo_artrash.png" style="width:100px;"></div>
+                </div>
+                <div class="col-lg-4 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_05.jpg" style="padding-bottom:10px;">
                     <p>Players aim to keep a heavily weighted shuttlecock (Jaegi) in the air for as long as possible using their bodies except for their hands. (suitable 5+)&nbsp; </p>
                     <p>Jegichagi is a&nbsp;<a href="https://en.wikipedia.org/wiki/Korea" target="_blank">Korean</a> traditional outdoor&nbsp;<a href="https://en.wikipedia.org/wiki/Game" target="_blank">game</a> in which players kick a paper&nbsp;jegi&nbsp;into
                         the air and attempt to keep it aloft. A&nbsp;jegi&nbsp;is similar to a&nbsp;<a href="https://en.wikipedia.org/wiki/Shuttlecock" target="_blank">shuttlecock</a>, and is made from paper wrapped around a small&nbsp;<a href="https://en.wikipedia.org/wiki/Coin"
@@ -317,21 +320,24 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_01.jpg">
+                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_01.jpg" style="padding-bottom:10px;">
                     <p>Craft Stall (suitable 5+)
                         <br/>Make a paper flower with tissue paper.&nbsp; </p>
                     <h6 style="color:#eb4221;">* Free, drop in, children must be with an adult at all times *&nbsp; </h6></div>
-                <div class="col-lg-4 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_02.jpg">
+                <div class="col-lg-4 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_02.jpg" style="padding-bottom:10px;">
                     <p>Craft Stall (suitable 5+)
                         <br/>Make a lotus lantern using a recycled cofffee cup and Korean paper.&nbsp; </p>
                     <h6 style="color:#eb4221;">* Free, drop in, children must be with an adult at all times *&nbsp; </h6>
-                    <h5>by Buddhist artist,&nbsp;Beob Jeon </h5>
+                    <div>
+    <h5 style="display: inline; ">by Buddhist artist, Beob Jeon </h5>
+    <img src="../assets/img/participation_buddhist.jpg" class="img-circle" style="width:100px;" />
+</div>
                     <p>Since 20010, Beob Jeon, a Buddhist artist, has been a very active member of Korean Artist Association in the UK and participated in various exhibition in Korea and the UK. She won prize from Grand Art Exhibition of Korean Buddhism
                         and has a license holder of painting of Cultural Assets Technician. </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_03.jpg">
+                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_03.jpg" style="padding-bottom:10px;">
                     <p>Find a experience stall for Hanbok for children&nbsp;aged from 9 to 15 and&nbsp;ladies!&nbsp;Why&nbsp;not try them on and take picture!&nbsp;Hanbok is the prepresentative example of traditional Korean dress. It is known for its vibrant
                         colours and simple lines withough pockets. There are hanbok for children (suitable 9+)&nbsp; </p>
                     <p>All is welcome, shapes and sizes to try on traditional Hanboks. For people who do not know what is a Korean hanbok: It is traditional grown originated from South Korea. Traditionally, people used to wear it every day, but nowadays
@@ -339,7 +345,7 @@
                         a normal day out in South Korea. So, everyone can wear it! Whatever the occasion! We will be having a stall where boys and girls can dress themselves up in fancy beautiful hanboks and become Korean princess and kings for the day.
                         They will be a photo booth provided, where you and your friends can take memorable photos in your gowns and show off your Hanbok. Don’t be shy and come along!&nbsp; </p>
                 </div>
-                <div class="col-lg-4 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_04.jpg">
+                <div class="col-lg-4 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_04.jpg" style="padding-bottom:10px;">
                     <p>Dol is a Korean tradition that celebrates the first birthday of a baby. This ceremony blesses the child with a prosperous future and has taken on great significance in Korea.&nbsp; </p>
                     <p>Doljabee is the highlight of the Dol. The child is placed in front of a table of fods and objects.and than child is urged to pick up an object from the table. It is believed the one selected will foretell the child's future.&nbsp;
                         </p>
