Update contents strings

--- a/education/education.html
+++ b/education/education.html
@@ -49,8 +49,8 @@
                             <h3 style="font-family:'Roboto Condensed', sans-serif;margin-bottom:0px;"><a href="../education/hanbok.html" style="font-family:'Open Sans Condensed', sans-serif;color:#56585b;"><strong>HANBOK </strong></a></h3><small>July 7, 2017 |&nbsp;KBCE</small>
                             <div class="row" style="margin-top:15px;margin-bottom:10px;">
                                 <div class="col-md-6">
-                                    <p style="font-size:13px;">All is welcome, shapes and sizes to try on traditional Hanboks. For people who do not know what is a Korean hanbok: It is traditional grown originated from South Korea. Traditionally, people used to wear it every day,
-                                        but nowadays Hanbok is traditional wore during spec... </p>
+                                    <p style="font-size:13px;">Hanbok is the traditional attire of the Korean people, worn daily up until just 100 years ago. These days it is generally only worn on festive occasions or special anniversaries. It is a formal dress and most Koreans
+                                        keep a Hanbok for special times in their lives such... </p>
                                     <div></div>
                                 </div>
                                 <div class="col-md-6">
