--- a/education/hanbok.html
+++ b/education/hanbok.html
@@ -56,10 +56,12 @@
     <iframe width="630" height="354" src="https://www.youtube.com/embed/-vcB_wIf_0U" frameborder="0" allowfullscreen></iframe>
 </div>
                             <p style="font-size:12px;"> </p>
-                            <p style="font-size:13px;">All is welcome, shapes and sizes to try on traditional Hanboks. For people who do not know what is a Korean hanbok: It is traditional grown originated from South Korea. Traditionally, people used to wear it every day, but nowadays
-                                Hanbok is traditional wore during special occasions, such as festivals or special anniversaries. Even though they're wearing for special occasions they are also worn for fun days out with friends and family around the palaces
-                                on a normal day out in South Korea. So, everyone can wear it! Whatever the occasion! We will be having a stall where boys and girls can dress themselves up in fancy beautiful hanboks and become Korean princess and kings
-                                for the day. They will be a photo booth provided, where you and your friends can take memorable photos in your gowns and show off your Hanbok. Don’t be shy and come along! </p>
+                            <p style="font-size:13px;">Hanbok is the traditional attire of the Korean people, worn daily up until just 100 years ago. These days it is generally only worn on festive occasions or special anniversaries. It is a formal dress and most Koreans keep a
+                                Hanbok for special times in their lives such as weddings or New Year’s celebration. &nbsp; </p>
+                            <p>Even though Hanbok is not worn on a daily basis anymore, Korean people have been increasingly wearing Hanbok for fun days out with friends and family especially when visiting Korean historic places such as the royal palaces.
+                                &nbsp;So you can say Hanbok is for everyone for whatever the occasion it might be. </p>
+                            <p>There will a stall where boys and girls can dress themselves up in fancy beautiful Hanboks and imagine what it would’ve been like to be Korean princess or perhaps the Prince for a day. There will also be a photo booth, where
+                                you and your friends can take memorable photos to show off your Hanbok. &nbsp;Don’t be shy and come along! </p>
                             <p style="font-size:12px;color:#808080;">Tags: Hanbok, Korean, Traditional Costume</p>
                         </div>
                     </div>
