--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
 <script>(function(d, s, id) {
  		  var js, fjs = d.getElementsByTagName(s)[0];
@@ -24,29 +22,33 @@
 
 <body>
     <div>
-        <nav class="navbar navbar-default navigation-clean">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand navbar-link" href="../home/home.html"><img src="../assets/img/main/logo.png" style="width:184px;height:41px;"></a>
-                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                </div>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);">HOME </a></li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
-                                <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
-                                <li role="presentation"><a href="../festival/community.html">COMMUNITY FEST</a></li>
+        <div class="row">
+            <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+                <nav class="navbar navbar-default navigation-clean">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <a class="navbar-brand navbar-link" href="../home/home.html"><img src="../assets/img/main/logo.png" style="width:184px;height:41px;"></a>
+                            <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                        </div>
+                        <div class="collapse navbar-collapse" id="navcol-1">
+                            <ul class="nav navbar-nav">
+                                <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);">HOME </a></li>
+                                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
+                                        <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
+                                        <li role="presentation"><a href="../festival/community.html">COMMUNITY FEST</a></li>
+                                    </ul>
+                                </li>
+                                <li role="presentation"><a href="../education/education.html">EDUCATION </a></li>
+                                <li role="presentation"><a href="../archive/archive.html">ARCHIVE </a></li>
+                                <li role="presentation"><a href="../contact/whoweare.html">WHO WE ARE</a></li>
                             </ul>
-                        </li>
-                        <li role="presentation"><a href="../education/education.html">EDUCATION </a></li>
-                        <li role="presentation"><a href="../archive/archive.html">ARCHIVE </a></li>
-                        <li role="presentation"><a href="../contact/whoweare.html">WHO WE ARE</a></li>
-                    </ul>
-                </div>
+                        </div>
+                    </div>
+                </nav>
             </div>
-        </nav>
+        </div>
     </div>
     <div>
         <div class="container">
