Adjust to wider width to all pages

--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -53,7 +53,7 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1" style="padding:20px;"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;margin-bottom:5px;">
+                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1" style="padding:20px;"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;margin-bottom:5px;">
                     <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">The Korean British Cultural Exchange is a newly-founded non-profit organisation set up to organise cultural and educational activities to promote Korean culture in the UK. The aim is to help better understand each other and build a
                         better community together through artistic collaboration and creativity. </p>
                     <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">KBCE is organised by volunteers and always welcome to work with local artists and people. If you like to have more information about the Korean British Cultural Exchange and its activities, please send us an email to&nbsp;<a href="mailto:kbce@kbce.org.uk"
@@ -72,7 +72,7 @@
     </a>
 </div>
                 </div>
-                <div class="col-lg-4 col-md-5">
+                <div class="col-lg-5 col-md-5" style="padding-right:30px;padding-left:30px;">
                     <div class="left-vertical-divider hidden-xs hidden-sm"></div>
                     <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>CONTACT</strong></h2>
                     <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
