--- a/home/home.html
+++ b/home/home.html
@@ -21,33 +21,31 @@
 </head>
 
 <body>
-    <div>
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
-                <nav class="navbar navbar-default navigation-clean">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <a class="navbar-brand navbar-link" href="../home/home.html"><img src="../assets/img/main/logo.png" style="width:184px;height:41px;"></a>
-                            <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                        </div>
-                        <div class="collapse navbar-collapse" id="navcol-1">
-                            <ul class="nav navbar-nav">
-                                <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);">HOME </a></li>
-                                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
-                                        <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
-                                        <li role="presentation"><a href="../festival/community.html">COMMUNITY FEST</a></li>
-                                    </ul>
-                                </li>
-                                <li role="presentation"><a href="../education/education.html">EDUCATION </a></li>
-                                <li role="presentation"><a href="../archive/archive.html">ARCHIVE </a></li>
-                                <li role="presentation"><a href="../contact/whoweare.html">WHO WE ARE</a></li>
-                            </ul>
-                        </div>
+    <div class="container">
+        <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="margin-left:65px;">
+            <nav class="navbar navbar-default navigation-clean">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand navbar-link" href="../home/home.html"><img src="../assets/img/main/logo.png" style="width:184px;height:41px;"></a>
+                        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                     </div>
-                </nav>
-            </div>
+                    <div class="collapse navbar-collapse" id="navcol-1">
+                        <ul class="nav navbar-nav navbar-right" style="margin-right:-70px;">
+                            <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);">HOME </a></li>
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
+                                    <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
+                                    <li role="presentation"><a href="../festival/community.html">COMMUNITY FEST</a></li>
+                                </ul>
+                            </li>
+                            <li role="presentation"><a href="../education/education.html">EDUCATION </a></li>
+                            <li role="presentation"><a href="../archive/archive.html">ARCHIVE </a></li>
+                            <li role="presentation"><a href="../contact/whoweare.html">WHO WE ARE</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
     </div>
     <div>
