--- a/festival/festival.html
+++ b/festival/festival.html
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                     <div class="intro">
-                        <h1 class="text-left" style="color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>KINGSTON KOREAN FESTIVAL</strong></h1></div>
+                        <h3 class="text-left" style="color:#eb4221;font-family:Open Sans Condensed, sans-serif;"><strong>KINGSTON KOREAN FESTIVAL</strong></h3></div>
                 </div>
             </div>
             <div class="row">
