--- a/festival/exhibition.html
+++ b/festival/exhibition.html
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                     <div class="intro">
-                        <h1 class="text-left" style="color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>EXIHIBITION 'DOL'</strong></h1></div>
+                        <h3 class="text-left" style="color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>EXIHIBITION 'DOL'</strong></h3></div>
                 </div>
             </div>
             <div class="row">
@@ -64,6 +64,9 @@
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/exhibition_01.jpg"></figure>
                     </div>
+                </div>
+                <div class="col-md-12">
+                    <p> </p>
                 </div>
             </div>
             <div class="row">
