--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -60,20 +60,20 @@
                     <div class="table-row" style="vertical-align: middle;padding-bottom:10px">
     <a href="https://www.facebook.com/kbce.official">
         <img src="../assets/img/logo_facebook.png" style="float:middle; width:30px;margin:0px;margin-right:10px;margin-left:0px;" />
-        <h5 style="display: inline; vertical-align: middle;">Korean British Cultural Exchange</h5>
+        <h5 style="display: inline; vertical-align: middle; color:#808080;">Korean British Cultural Exchange</h5>
     </a>
 </div>
                     <div class="table-row" style="vertical-align: middle;">
     <a href="https://www.instagram.com/_kbce">
         <img src="../assets/img/logo_insta.png" style="float:middle; width:30px;margin:0px;margin-right:10px;margin-left:0px;" />
-        <h5 style="display: inline; vertical-align: middle;">_KBCE</h5>
+        <h5 style="display: inline; vertical-align: middle; color:#808080;">_KBCE</h5>
     </a>
 </div>
                 </div>
                 <div class="col-lg-5 col-md-5" style="padding-right:30px;padding-left:30px;">
                     <div class="left-vertical-divider hidden-xs hidden-sm"></div>
-                    <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>CONTACT</strong></h2>
-                    <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
+                    <h3 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>CONTACT</strong></h3>
+                    <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
                     <div class="form-group has-success has-feedback">
     <div class="fb-comments" data-href="http://kbce.org.uk" data-width="100%" data-numposts="5"></div>
 </div>
