--- a/festival/community.html
+++ b/festival/community.html
@@ -54,16 +54,16 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" style="margin-top:20px;">
                 <div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 col-sm-5 col-sm-offset-1 col-xs-6" style="color:#055ada;background-color:#e4e4e4;">
-                    <h4 class="text-center"><a href="#performance" style="font-family:'Open Sans Condensed', sans-serif;"><strong>PERFORMANCE </strong></a></h4></div>
+                    <h4 class="text-center"><a href="#performance" style="font-family:'Open Sans Condensed', sans-serif;color:#127d2d;"><strong>PERFORMANCE </strong></a></h4></div>
                 <div class="col-lg-4 col-md-4 col-sm-5 col-xs-6" style="color:#055ada;background-color:#e4e4e4;">
-                    <h4 class="text-center"><a href="#participation" style="font-family:'Open Sans Condensed', sans-serif;"><strong>PARTICIPATION </strong></a></h4></div>
+                    <h4 class="text-center"><a href="#participation" style="font-family:'Open Sans Condensed', sans-serif;color:#127d2d;"><strong>PARTICIPATION </strong></a></h4></div>
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="color:#055ada;">
                     <div id="performance">
-    <h2 style="font-family:'Open Sans Condensed', sans-serif;"><strong>PERFORMANCE</strong></h2>
+    <h3 style="font-family:'Open Sans Condensed', sans-serif;color:#127d2d;"><strong>PERFORMANCE</strong></h3>
 </div>
                 </div>
             </div>
@@ -116,8 +116,8 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-1 col-md-8 col-md-offset-1 col-sm-9">
                     <div class="text">
-                        <h4 style="font-family:Armata, sans-serif;color:#eb4221;"><strong>DANCE </strong></h4>
-                        <h4 style="color:#1f2021;"><strong>Performing Team_Mystic Nights&nbsp;Entertainment </strong></h4>
+                        <h3 style="font-family:Armata, sans-serif;color:#eb4221;font-size:15px;"><strong>DANCE </strong></h3>
+                        <h5 style="color:#1f2021;"><strong>Performing Team_Mystic Nights&nbsp;Entertainment </strong></h5>
                         <p>Mystic Nights Entertainment is a group of 15 performers consisting of dancers, singers and musicians. It is made of three distinctive performance groups, two of which are the team of dancers and a team of singers. &nbsp;Mystic
                             Nights was established in 2013 and share strong team work even though one of the team is based in Indonesia. Mystic Nights specialises in choreography for music of all genres across different cultures given the group members’
                             ethnical diversity. </p>
@@ -138,8 +138,8 @@
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-9">
                     <div class="text">
-                        <h4 style="font-family:Armata, sans-serif;color:#eb4221;"><strong>MUSIC</strong> </h4>
-                        <h4 style="color:#1f2021;"><strong>DJ/Producer Meligen</strong> </h4>
+                        <h3 style="font-family:Armata, sans-serif;color:#eb4221;font-size:15px;"><strong>MUSIC</strong> </h3>
+                        <h5 style="color:#1f2021;"><strong>DJ/Producer_Meligen</strong> </h5>
                         <p>Producer, Meligen is the working name for ML. His career has started in 2007 as a DJ. He plays and produces music of all genres and he specialises in Hip-hop. &nbsp;Since the start of his career, he has been working across various
                             fields within the music industry. &nbsp;His experience includes working as a DJ, music producer, composer, arranger, record producer, recording engineer, mixing engineer, mastering engineer, music director and he also worked
                             as a sound engineer for animations and movies. </p>
@@ -151,8 +151,8 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-1 col-md-8 col-md-offset-1 col-sm-9">
                     <div class="text">
-                        <h4 style="font-family:Armata, sans-serif;color:#eb4221;"><strong>MUSIC </strong></h4>
-                        <h4 style="color:#1f2021;"><strong>Gunmin Kim</strong> </h4>
+                        <h3 style="font-family:Armata, sans-serif;color:#eb4221;font-size:15px;"><strong>MUSIC </strong></h3>
+                        <h5 style="color:#1f2021;"><strong>Singer/Songwriter_Gunmin Kim</strong> </h5>
                         <p>Gunmin Kim is an active member of ‘Artrash’ which is an Arts and Environmental project. He has been touring around Korea to promote the ‘Artrash since 2014. &nbsp;Gunmin as a singer and was inspired by folk and band music, especially
                             60’s British band music and UK artists. &nbsp;His style of music has been influenced by the UK artists such as Adele, Sam Smith, Birdy, Ed Sheeran. </p>
                         <p> <a href="www.artrash.org " style="color:#808080;"><span style="text-decoration: underline;">www.artrash.org</span> </a></p>
@@ -171,7 +171,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
-                    <h3><strong>SAMULNORI_ BRIDGE </strong></h3></div>
+                    <h3><strong>SAMULNORI_BRIDGE </strong></h3></div>
                 <div class="col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/community-fest_05.png"></figure>
@@ -196,7 +196,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
-                    <h3><strong>ARIRANG GAYAGEUM ENSEMBLE </strong></h3></div>
+                    <h3><strong>GAYAGEUM ENSEMBLE_ARIRANG GAYAGEUM ENSEMBLE</strong></h3></div>
                 <div class="col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/community-fest_07.png"></figure>
@@ -219,7 +219,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
-                    <h3><strong>KOREAN MARTIAL ARTS_HAPKIDO </strong></h3></div>
+                    <h3><strong>KOREAN MARTIAL ARTS HAPKIDO_SCHOOL OF KOREAN MARTIAL ARTS (SKMA)</strong></h3></div>
                 <div class="col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/community-fest_06.png"></figure>
@@ -258,7 +258,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
-                    <h3><strong>KOREAN FOOD </strong></h3></div>
+                    <h3><strong>MAKING KIMCHI</strong></h3></div>
                 <div class="col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 col-sm-3">
                     <div class="toc">
                         <figure><img class="img-responsive" src="../assets/img/market-fest_07.jpg"></figure>
@@ -277,7 +277,7 @@
                 <div class="col-lg-7 col-lg-offset-1 col-md-7 col-md-offset-1 col-sm-9">
                     <div>
                         <div class="text">
-                            <h4 style="font-family:Armata, sans-serif;color:#eb4221;"><strong>CHEF </strong></h4>
+                            <h3 style="font-family:Armata, sans-serif;color:#eb4221;font-size:15px;"><strong>CHEF </strong></h3>
                             <h4 style="color:#1f2021;"><strong>Sharky Yoon</strong> </h4>
                             <div>
                                 <p>Sharky Yoon is the managing director of Mr.Kimchi and a Korean food developer in the UK.Mr.Kimchi is a premium Kimchi brand launched in 2013 and best known for providing customers with healthy, tasty and fresh kimchi in
@@ -296,14 +296,16 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="color:#055ada;">
                     <div id="participation">
-    <h2 style="font-family:'Open Sans Condensed', sans-serif;"><strong>PARTICIPATION</strong></h2>
+    <h3 style="font-family:'Open Sans Condensed', sans-serif;color:#127d2d;">
+        <strong>PARTICIPATION</strong>
+    </h3>
 </div>
                     <p style="color:#030303;">Participation program runs with the Artrash project team. </p>
                     <p style="color:#eb4221;">*Free, drop in, Children must be with an adult at all times&nbsp; </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_06.jpg" style="padding-bottom:10px;">
+                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6" style="padding-left:30px;padding-right:30px;"><img class="img-responsive" src="../assets/img/festival/participation_06.jpg" style="padding-bottom:10px;">
                     <p>They will be boys and girls strutting the catwalk, with originals outfits made by recyclable goods- showing the collision of fashion and rubbish for the public to enjoy. ‘ArtTrash’ is created by Seyoung Jang, who established ‘ArtTrash’
                         based in Gwanak-Gu. The artist will be working along with the Environmental Department of Kingston Council, which works towards ‘waste 0’ Scheme. This show is to inspire the youth as well as the old to see the beauty within rubbish
                         and to put it into good used, as in these day and age we are used to wasting so much! where are all these things can be put to good and create something beautiful and memorable. This show reflects that! </p>
@@ -311,7 +313,7 @@
                         be used as a token in exchange for a face painting or education programmes on the day!Let’s Get Arty! </p>
                     <div><a href="www.artrash.org " style="color:#808080;"><span style="text-decoration: underline;">www.artrash.org</span> </a><img src="../assets/img/logo_artrash.png" style="width:100px;"></div>
                 </div>
-                <div class="col-lg-5 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_05.jpg" style="padding-bottom:10px;">
+                <div class="col-lg-5 col-md-5 col-sm-6" style="padding-left:30px;padding-right:30px;"><img class="img-responsive" src="../assets/img/festival/participation_05.jpg" style="padding-bottom:10px;">
                     <p>Players aim to keep a heavily weighted shuttlecock (Jaegi) in the air for as long as possible using their bodies except for their hands. (suitable 5+) </p>
                     <p>Jegichagi is a Korean traditional outdoor game in which players kick a paper jegi into the air and attempt to keep it aloft. A jegi is similar to a shuttlecock, and is made from paper wrapped around a small coin.In Korea, children
                         usually play alone or with friends in winter seasons, especially on Lunar New Year. Briefly explaining the rules, the player kicks a jegi up in the air and keeps on kicking to prevent from falling to the ground. In a one-to-one
@@ -321,11 +323,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_01.jpg" style="padding-bottom:10px;">
+                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6" style="padding-right:30px;padding-left:30px;"><img class="img-responsive" src="../assets/img/festival/participation_01.jpg" style="padding-bottom:10px;">
                     <p>Craft Stall (suitable 5+)
                         <br/>Make a paper flower with tissue paper.&nbsp; </p>
                     <h6 style="color:#eb4221;">* Free, drop in, children must be with an adult at all times *&nbsp; </h6></div>
-                <div class="col-lg-5 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_02.jpg" style="padding-bottom:10px;">
+                <div class="col-lg-5 col-md-5 col-sm-6" style="padding-right:30px;padding-left:30px;"><img class="img-responsive" src="../assets/img/festival/participation_02.jpg" style="padding-bottom:10px;">
                     <p>Craft Stall (suitable 5+)
                         <br/>Make a lotus lantern using a recycled cofffee cup and Korean paper.&nbsp; </p>
                     <h6 style="color:#eb4221;">* Free, drop in, children must be with an adult at all times *&nbsp; </h6>
@@ -338,7 +340,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_03.jpg" style="padding-bottom:10px;">
+                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-6" style="padding-right:30px;padding-left:30px;"><img class="img-responsive" src="../assets/img/festival/participation_03.jpg" style="padding-bottom:10px;">
                     <p>Find a experience stall for Hanbok for children&nbsp;aged from 9 to 15.&nbsp;Why not try them on and take picture!&nbsp;Hanbok is the prepresentative example of traditional Korean dress. It is known for its vibrant colours and simple
                         lines withough pockets. There are hanbok for children. </p>
                     <p>All is welcome, shapes and sizes to try on traditional Hanboks. For people who do not know what is a Korean hanbok: It is traditional dress originated from&nbsp;Korea. Traditionally, people used to wear it every day, but nowadays Hanbok
@@ -346,7 +348,7 @@
                         day out in South Korea. So, everyone can wear it! Whatever the occasion! We will be having a stall where boys and girls can dress themselves up in fancy beautiful hanboks and become Korean Princess and Prince&nbsp;for the day.
                         They will be a photo booth provided, where you and your friends can take memorable photos in your gowns and show off your Hanbok. Don’t be shy and come along! </p>
                 </div>
-                <div class="col-lg-5 col-md-5 col-sm-6"><img class="img-responsive" src="../assets/img/festival/participation_04.jpg" style="padding-bottom:10px;">
+                <div class="col-lg-5 col-md-5 col-sm-6" style="padding-right:30px;padding-left:30px;"><img class="img-responsive" src="../assets/img/festival/participation_04.jpg" style="padding-bottom:10px;">
                     <p>Dol is a Korean tradition that celebrates the first birthday of a baby. This ceremony blesses the child with a prosperous future and has taken on great significance in Korea. </p>
                     <p>Doljabee is the highlight of the Dol. The child is placed in front of a table of fods and objects.and than child is urged to pick up an object from the table. It is believed the one selected will foretell the child's future. </p>
                     <ul>
