--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1; url=home/home.html">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">    <meta charset="UTF-8">
     <script type="text/javascript">
         window.location.href = "home/home.html"
     </script>
